2006-12-16 Niklas Knutsson  <nq@altern.org>

	* New French translation (Nicolas Laug <Nicolas.Laug@polymtl.ca>)

2006-11-18 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation

2006-11-07 Niklas Knutsson  <nq@altern.org>

	* Update Dutch translation (Jaap Woldringh <jjh.woldringh@planet.nl>)

2006-11-02 Niklas Knutsson  <nq@altern.org>

	* Use "name := value" as shortcut for save(value; name)
	* Return value in save()

2006-09-10 Niklas Knutsson  <nq@altern.org>

	* Group integer factors in powers

2006-09-05 Niklas Knutsson  <nq@altern.org>

	* Integer factorization
	* Heaviside Step Function, Rectangular Function, Triangular Function, and Ramp Function
	* Kronecker Delta, Sigmoid, and Logit Transformation

2006-08-18 Niklas Knutsson  <nq@altern.org>

	* Generate API docs from autogen.sh
	* Radius instead of diameter as argument for circumference()

2006-07-21 Niklas Knutsson  <nq@altern.org>

	* Interpret 0x[0-9,a-f] as hexadecimal number (do not require first digit to be 0-9)

2006-07-03 Niklas Knutsson  <nq@altern.org>

	* Add optional upper and lower limit arguments to integrate() for definite integrals
	* Add cross() function
	* Handle powers with multiplication as base when setting prefixes
	* Split powers with units when placing units separately
	* Increment version number

2006-06-21 Niklas Knutsson  <nq@altern.org>

	* Fix parsing of "x!)!"
	* Use Julian year for light-year value

2006-06-20 Niklas Knutsson  <nq@altern.org>

	* Use "Display units separately" also for quantities with multiple terms

2006-06-10 Niklas Knutsson  <nq@altern.org>

	* Add base 3 exponent mode
	* Add "Engineering" display mode

2006-06-06 Niklas Knutsson  <nq@altern.org>

	* Unevaluated arguments were used when checking for numerical arguments in
	   logn(), which caused log2(16/2) to first be evaluated to ln(16/2)/ln(2).

2006-06-01 Niklas Knutsson  <nq@altern.org>

	* Polishing before 0.9.4 release

2006-05-18 Niklas Knutsson  <nq@altern.org>
