@@ -368,8 +368,8 @@
       </argument>
     </function>
     <function>
-      <_title>Permutations</_title>
-      <_names>r:perm</_names>
+      <_title>Permutations (Variations)</_title>
+      <_names>r:perm,variations</_names>
       <expression>\x!/(\x-\y)!</expression>
       <_description>Returns the number of possible arrangements of an ordered list with a number of objects to choose from and a list size. If there are three objects (1, 2 and 3) that is put in a list with two positions, the alternatives are [1, 2], [2, 1], [1, 3], [3, 1], [2, 3] and [3, 2], and thus the number of permutations is 6.</_description>
       <argument type="free" index="1">
